# yomikata

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
scripts/: import_eijiro.py
src/: __init__.py  ai_worker.py  config.py  database.py  importer.py  logging_utils.py  main.py  processor.py  style.py  widgets.py  yomitan_parser.py
src/controllers/: ai_controller.py  analysis_controller.py
src/core/: config.py  database.py  linguistics.py  processor.py
src/dialogs/: history_dialog.py  settings_dialog.py
src/services/: ai_service.py  dictionary_service.py  history_service.py
src/ui/: card_factory.py  main_window.py  style.py
src/ui/layouts/: flow_layout.py
src/ui/widgets/: __init__.py  cards.py  token_widgets.py  widgets.py
src/utils/: importer.py
tests/: conftest.py  test_database.py  test_processor.py  test_services.py
tests/core/: test_database_isolated.py  test_linguistics_fugashi.py  test_processor_isolated.py
tests/ui/: test_cards.py  test_main_window.py
tests/utils/: test_importer_isolated.py
