[project]
name = "yomikata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi>=1.5.2",
    "jamdict>=0.1a11.post2",
    "markdown>=3.10.2",
    "ollama>=0.6.2",
    "openai>=2.33.0",
    "pykakasi>=2.3.0",
    "pyqt6>=6.11.0",
    "qtawesome>=1.4.2",
    "requests>=2.33.1",
    "unidic-lite>=1.0.8",
]
