[project]
name = "yomikata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fugashi>=1.5.2",
    "jamdict>=0.1a11.post2",
    "jamdict-data>=1.5",
    "lxml>=6.1.0",
    "markdown>=3.10.2",
    "mypy>=1.20.2",
    "ollama>=0.6.2",
    "openai>=2.33.0",
    "pykakasi>=2.3.0",
    "pyqt6>=6.11.0",
    "pyqt6-stubs>=20250824",
    "pytest>=9.0.3",
    "qtawesome>=1.4.2",
    "requests>=2.33.1",
    "sqlite-zstd",
    "types-markdown>=3.10.2.20260408",
    "unidic-lite>=1.0.8",
]

[tool.uv.sources]
sqlite-zstd = { git = "https://github.com/phiresky/sqlite-zstd.git", subdirectory = "python" }

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["database", "services.*", "processor"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jamdict.*", "fugashi.*", "jamdict_data.*", "qtawesome.*", "sqlite_zstd.*"]
ignore_missing_imports = true
